service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-svc
spec:
  type: NodePort
  selector:
    app: go
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 9000
