ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-svc
            port:
              number: 80
      - path: /ping
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-svc
            port:
              number: 80
